--- a/benchmarkwindow.ui
+++ b/benchmarkwindow.ui
@@ -158,6 +158,32 @@ color: rgb(0,0,0);</string>
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="saveResultsPushButton">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>60</y>
+      <width>113</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save Results</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="mRpmLabel">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>440</y>
+      <width>59</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>RPM</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
